anche il nero vince